5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1822_3183.log
== TEST (2019-06-13 10:05:14) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:05:42) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
print(v[-1, ])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:06:52) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:07:31) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
for i in range(size(v)):
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:07:43) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
for i in range(size(v)):
	i = i + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:09:15) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
y = [-1, ]
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:09:29) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
y = [ ,-1]
print(y)
-- ERROR:
File "XXXX", line 4
    y = [ ,-1]
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:10:03) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
y = [ -1 , ]
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:11:03) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in v:
	v[-1] = v[-1] + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:11:33) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in v:
	v[-1] = x[0] 

print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:06) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in v:
	v[-1] = x[0] 
	x[0] = v[-1]
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:19) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in v:
	v[-1] = x[0] 
	x[0] = v[-1]
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:43) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in v:
	x[0] = v[-1]
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:13:02) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in v:
	x[0] = v[-1]
	x[1] = v[-2]
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:13:10) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in v:
	x[0] = v[-1]
	x[1] = v[-2]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:13:33) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in v:
	x[0] = v[-1]
	x[1] = v[-2]
	x[i] = v[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:13:47) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in v:
	x[0] = v[-1]
	x[1] = v[-2]
	x[2] = v[-3]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:14:48) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
j = i - 1
for i in v:
	x[0] = v[-1]
	x[1] = v[-2]
	x[2] = v[-3]
	x[3] = v[-4]
	x[i] = v[j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:14:58) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
i=0
j = i - 1
for i in v:
	x[0] = v[-1]
	x[1] = v[-2]
	x[2] = v[-3]
	x[3] = v[-4]
	x[i] = v[j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:15:11) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
i=0
j = i - 1
for i in v:
	x[0] = v[-1]
	x[1] = v[-2]
	x[2] = v[-3]
	x[3] = v[-4]
	x[j] = v[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:15:21) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
i=0
j = i - 1
for i in v:
	x[0] = v[-1]
	x[1] = v[-2]
	x[2] = v[-3]
	x[3] = v[-4]
	x[4] = v[-5]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:15:50) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
i=0
j = i - 1
for i in v:
	x[0] = v[-1]
	x[1] = v[-2]
	x[2] = v[-3]
	x[3] = v[-4]
	x[4] = v[-5]
	x[5] = v[-6]
	x[6] = v-7
	
	
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:15:54) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
i=0
j = i - 1
for i in v:
	x[0] = v[-1]
	x[1] = v[-2]
	x[2] = v[-3]
	x[3] = v[-4]
	x[4] = v[-5]
	x[5] = v[-6]
	x[6] = v[-7]
	
	
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:16:22) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
i=0
j = i - 1
for i in v:
	x[0] = v[-1]
	x[1] = v[-2]
	x[2] = v[-3]
	x[3] = v[-4]
	x[4] = v[-5]
	x[5] = v[-6]
	x[6] = v[-7]
	x[7] = v[-8]
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:17:13) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
i = 0
j = i - 1
for i in v:
	x[i] = v[j]
	
	
	
	
	x[0] = v[-1]
	x[1] = v[-2]
	x[2] = v[-3]
	x[3] = v[-4]
	x[4] = v[-5]
	x[5] = v[-6]
	x[6] = v[-7]
	x[7] = v[-8]
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:17:52) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in v:
	i = 0
	j = i -1
	x[i] = v[j]
	
	
	
	
	x[0] = v[-1]
	x[1] = v[-2]
	x[2] = v[-3]
	x[3] = v[-4]
	x[4] = v[-5]
	x[5] = v[-6]
	x[6] = v[-7]
	x[7] = v[-8]
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:18:06) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in v:
	i = 0
	j = i -1
	x[i] = v[j]
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:19:05) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in v:
	i = 0
	j = i -1
	x[i] = v[j]
for i in v:
	i = 1
	j = i -1
	x[i] =v[j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:19:41) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(v)):
	i = 0
	j = i -1
	x[i] = v[j]
for i in v:
	i = 1
	j = i -1
	x[i] =v[j]
for 
print(x)
-- ERROR:
File "XXXX", line 13
    for 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:19:52) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(v)):
	i = 0
	j = i -1
	x[i] = v[j]
for i in v:
	i = 1
	j = i -1
	x[i] =v[j]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:19:59) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(v)):
	i = 0
	j = i -1
	x[i] = v[j]


print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:20:25) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(v)):
	i = 0
	j = i - 1
	x[i] = v[j]


	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:20:45) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(v)):
	i = 0
	j = i - 1
	x[i] = v[j]


print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:24) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
while(size(v)==size(x)):

	for i in range(size(v)):
		i = 0
		j = i - 1
		x[i] = v[j]


print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:31) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
while(size(v)==size(x)):

	for i in range(size(v)):
		i = 0
		j = i - 1
		x[i] = v[j]


	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:22:28) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
for i in range(size(x)):
	i = 0
	j = i - 1
	x[i] = v[j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:22:35) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
for i in range(size(x)):
	i = 0
	j = i - 1
	x[i] = v[j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:22:42) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
for i in range(size(x)):
	i = 0
	j = i - 1
	x[i] = v[j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:23:12) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
i=0
j=i-1
for i in range(size(x)):
	
	x[i] = v[j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:24:34) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
i=0
j=i-1
for i in range(size(x)):
	i = 0
	j = i -1
	x[i] = v[j]
	i = i +1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:24:48) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(x)):
	i = 0
	j = i -1
	x[i] = v[j]
	i = i +1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:25:10) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(x)):
	i = 0
	j = i - 1
	x[i] = v[j]
	i = i + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:25:37) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(x)):
	i = 0
	j = i - 1
	i = i + 1
	x[i] = v[j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:25:57) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(x)):
	i = 0
	j = i - 1
	x[i] = v[j]
	i = i +1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:26:36) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(x)):
	i = 0
	j = i - 1
	x[j] = v[i]
	i = i +1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:26:47) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(x)):
	i = 0
	j = i - 1
	x[j] = v[i]
	i = i +1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:00) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in x:
	i = 0
	j = i - 1
	x[j] = v[i]
	i = i + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:08) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in v:
	i = 0
	j = i - 1
	x[j] = v[i]
	i = i + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:38) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(v)):
	i = 0
	j = i - 1
	x[j] = v[i]
	i = i + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:10) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(v)):
	i = 0
	j = i - 1
	x[j] = v[i]
	i = i + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:37) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(v)):
	i = 0
	j = i - 1
	x[j] = v[i]
	i = i + 1
	j = i - 1
	x[j] = v[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:29:07) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(v)):
	i =  i + 1
	j = i - 1
	x[j] = v[i]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:29:13) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(v)):
	i = 0
	j = i - 1
	x[j] = v[i]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:29:25) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(v)):
	i = 0
	j = i - 1
	x[j] = v[i]
	i = i -1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:29:34) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(v)):
	i = 0
	j = i - 1
	x[j] = v[i]
	i = i + 1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:34:51) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(v)):
	i = 0
	j = i - 1
	x[j] = v[i]
	i = i + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:36:37) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
j = size(v) - 1 - i
for i in range(size(v)):
	i = 0
	j = i - 1
	x[j] = v[i]
	i = i + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:37:11) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)

for i in range(size(v)):
	i = 0
	j = size(v) - i - 1
	j = i - 1
	x[j] = v[i]
	i = i + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:37:17) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
i=0
for i in range(size(v)):

	j = size(v) - i - 1
	j = i - 1
	x[j] = v[i]
	i = i + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:39:34) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
i=0

for i in range(size(v)):
	j = size(v) - i - 1
	x[j] = v[i]
	aux = v[i] + 1
	i = i + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:39:52) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor: ")))
x = zeros(size(v),dtype=int)
i=0

for i in range(size(v)):
	j = size(v) - i - 1
	x[j] = v[i]
	aux = v[i] + 1
	i = i + 1
print(x)
-- EXECUTION TIME:
0.963926
-- TEST CASE 1:
---- input:
[20,19,18,17,10,9,8,7]
---- correct output:
[ 7  8  9 10 17 18 19 20]
---- user output:
[ 7  8  9 10 17 18 19 20]
-- TEST CASE 2:
---- input:
[6,6,6,5,5,5,4,4,4,3,3,3]
---- correct output:
[3 3 3 4 4 4 5 5 5 6 6 6]
---- user output:
[3 3 3 4 4 4 5 5 5 6 6 6]
-- TEST CASE 3:
---- input:
[4,3,2,1,0,-1,-2,-3]
---- correct output:
[-3 -2 -1  0  1  2  3  4]
---- user output:
[-3 -2 -1  0  1  2  3  4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
